base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  template:
    spec:
      containers:
        - name: app
          image: <image>
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 5m
              memory: 32Mi
