base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-green
spec:
  ports:
    - port: 8080
