base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  ingressClassName: nginx
  rules:
    - host: <host> # rollouts-demo-ingress-rollouts-demo.apps.q4n4p.dynamic.redhatworkshops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 8080
  # defaultBackend: {}
